custom404/k8s/custom404-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom404
  namespace: monsters
spec:
  selector:
    app: custom404
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
